# herculus

./: .envrc  .gitignore  .projectile  .stylish-haskell.yaml  README.md  build-client-nix.sh  build-client.sh  build-doc.sh  build-server-nix.sh  build-server.sh  combine-js-app.sh  default.nix  deployment-logical.nix  deployment-physical.nix  entry.dev.js  entry.js  entry.prod.js  font-awesome.config.js  gitlab-ci.yml  gulpfile.js  nginx.conf  package.json  run.sh  webpack.config.js  webpack.dev.config.js  webpack.prod.config.js
app/: README.md  cabal.project  cabal.project.freeze  haskell-packages.nix  hie.yaml  stack.yaml
app/client/: .dockerignore  .gitignore  Dockerfile  README.md  Rest.purs.patch  bower-packages.nix  bower.json  client.cabal  client.nix  combine-js-app.sh  default.nix  entry.js  ghcjs-bundle-nix.sh  ghcjs-bundle.sh  gulpfile.js  node-packages.nix  package-lock.json  package.json  shell.nix  stack.yaml  webpack.config.js  webpack.prod.config.js
app/latex/: default.nix  metrixletter.cls  pletter.cls
app/lib/: default.nix  herculus-lib.cabal  herculus-lib.nix  shell.nix  stack.yaml
app/lib/doc-gen/: Main.hs  Options.hs
app/lib/nix/: servant-purescript.nix
app/lib/psc-gen/: Main.hs  Options.hs
app/lib/src/Data/Aeson/: Bson.hs
app/lib/src/Lib/: Compiler.hs  Model.hs  Prelude.hs  Template.hs  Types.hs  Utils.hs
app/lib/src/Lib/Api/: Rest.hs  Schema.hs  WebSocket.hs
app/lib/src/Lib/Api/Rest/: Report.hs
app/lib/src/Lib/Api/Schema/: Auth.hs  Column.hs  Compiler.hs  Project.hs
app/lib/src/Lib/Compiler/: AST.hs  Check.hs  Checker.hs  Core.hs  Docs.hs  Env.hs  Error.hs  Eval.hs  Interpreter.hs  Parse.hs  Parser.hs  Prelude.hexl  Pretty.hs  Type.hs  Typechecker.hs  Types.hs
app/lib/src/Lib/Compiler/AST/: Common.hs  Position.hs
app/lib/src/Lib/Compiler/Check/: Error.hs  Extract.hs  Monad.hs  Types.hs
app/lib/src/Lib/Compiler/Check/Error/: Types.hs
app/lib/src/Lib/Compiler/Check/Monad/: Types.hs
app/lib/src/Lib/Compiler/Checker/: Extract.hs  Monad.hs
app/lib/src/Lib/Compiler/Eval/: Monad.hs  Types.hs
app/lib/src/Lib/Compiler/Interpreter/: Types.hs
app/lib/src/Lib/Compiler/Parse/: Common.hs  Lexer.hs  State.hs
app/lib/src/Lib/Compiler/Parser/: Common.hs  Lexer.hs  State.hs
app/lib/src/Lib/Compiler/Typechecker/: Prim.hs  Types.hs
app/lib/src/Lib/Model/: Auth.hs  Cell.hs  Class.hs  Column.hs  Column.hs-boot  Common.hs  Dependencies.hs  Project.hs  Project.hs-boot  Row.hs  Table.hs  ViewState.hs
app/lib/src/Lib/Model/Dependencies/: Types.hs
app/lib/src/Lib/Template/: AST.hs  Check.hs  Core.hs  Eval.hs  Parse.hs  Parser.hs  Types.hs
app/lib/src/Lib/Template/Parse/: Lexer.hs
app/lib/src/Lib/Util/: Base64.hs
app/lib/src/Lib/Utils/: Base64.hs
app/psc-client/: .gitignore  bower.json  default.nix  package.json  webpack.config.js  webpack.prod.config.js
app/react-client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
app/server/: build-server.sh  default.nix  server.cabal  server.nix  shell.nix  stack.yaml
app/server/app/: Main.hs
app/server/src/: Auth.hs  ConnectionManager.hs  Engine.hs  HexlNat.hs  Latex.hs  Migration.hs  Monads.hs  Options.hs
app/server/src/Auth/: Permission.hs
app/server/src/Engine/: Compile.hs  Monad.hs  Propagate.hs  Util.hs
app/server/src/Handler/: Rest.hs  WebSocket.hs
app/server/src/Migration/: Tasks.hs
app/server/test/: Spec.hs
assets/components/: AutoSizer.js  Grid.js  OnClickOutside.js  OnDidMount.js
assets/public/: index.html
assets/sass/: main.scss
client/: client.cabal  client.nix  default.nix  react-flux-servant.nix  react-flux.nix  shell.nix  stack.yaml
client/jsbits/: config.js
client/nix-haskellPackages-fixes/: ghcjs-dom-jsffi.nix  ghcjs-dom.nix  react-flux.nix  scientific.nix
client/src/: Action.hs  Config.hs  Helper.hs  LoggedIn.hs  Main.hs  Misc.hs  Project.hs  Store.hs  Views.hs  WebSocket.hs  Widgets.hs
client/src/Action/: Column.hs  Message.hs  RecordCache.hs  RowCache.hs
client/src/Action/Column/: Types.hs
client/src/Action/RecordCache/: Types.hs
client/src/Api/: Rest.hs
client/src/React/Flux/Addons/: Free.hs  Servant.hs
client/src/Store/: Column.hs  Message.hs  RecordCache.hs  RowCache.hs  Session.hs  Types.hs
client/src/Views/: Auth.hs  Cell.hs  Column.hs  Combinators.hs  Common.hs  Foreign.hs  ProjectOverview.hs  Record.hs  ReportCell.hs  Row.hs  Table.hs  Util.hs
client/src/Views/Auth/: Login.hs
client/src/Views/Column/: ConfigDialog.hs
client/src/Widgets/: Canvas.hs  Cell.hs  Column.hs  ProjectList.hs  Record.hs  Table.hs  TableList.hs
deployment/: .envrc  .gitattributes  aws.nix  herculus.nix  herculus.nixops  smtp.nix  vbox.nix
doc/: .gitignore  README.md  build-doc.sh  default.nix  mkdocs.yml  shell.nix
doc/docs/: formulas.md  index.md
landing-page/: .gitignore
lib/: Setup.hs  default.nix  herculus-lib.cabal  herculus-lib.nix  lib.cabal  prelude.md  stack.yaml
lib/src/: Lib.hs
lib/src/Data/Aeson/: Bson.hs
lib/src/Lib/: Base64.hs  Compiler.hs  Expression.hs  Model.hs  NamedMap.hs  Template.hs  Types.hs
lib/src/Lib/Api/: Rest.hs  WebSocket.hs
lib/src/Lib/Compiler/: Interpreter.hs  Parser.hs  Typechecker.hs  Types.hs
lib/src/Lib/Compiler/Interpreter/: Types.hs
lib/src/Lib/Compiler/Typechecker/: Prim.hs  Types.hs
lib/src/Lib/Model/: Auth.hs  Cell.hs  Class.hs  Column.hs  Dependencies.hs  Project.hs  Record.hs  References.hs  Row.hs  Table.hs  Table.hs-boot  Types.hs
lib/src/Lib/Model/Dependencies/: Types.hs
lib/src/Lib/Template/: Interpreter.hs  Parser.hs  Typechecker.hs  Types.hs
lib/src/Lib/Util/: Base64.hs
server/: default.nix  server.cabal  server.nix  stack.yaml
server/app/: Main.hs
server/src/: Auth.hs  Cache.hs  CellCache.hs  ConnectionManager.hs  Dependencies.hs  Engine.hs  Eval.hs  Handler.hs  HexlNat.hs  Latex.hs  Monads.hs  Options.hs  Propagate.hs  Server.hs  Typecheck.hs
server/src/Auth/: Permission.hs
server/src/Engine/: Compile.hs  Monad.hs  Propagate.hs  Util.hs
server/src/Handler/: Rest.hs  WebSocket.hs
server/src/Propagate/: Cache.hs  Monad.hs
(+213 files in other folders)
