name:                client
version:             0.0.1
-- synopsis:
-- description:
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable client
  main-is:             Main.hs
  other-modules:       WebSocket
                     , Action
                     , Action.RecordCache
                     , Action.Message
                     , Action.Column
                     , Store.RecordCache
                     , Store.Message
                     , Store.Column
                     , Config
                     , Helper
                     , Store
                     , Views
                     , Views.Auth
                     , Views.Table
                     , Views.Column
                     , Views.Record
                     , Views.Cell
                     , Views.ReportCell
                     , Views.Foreign
                     , Views.Combinators
                     , Views.Common
                     , Views.Util
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , LambdaCase
                     , BangPatterns
                     , RecordWildCards
  js-sources:          jsbits/config.js
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , deepseq
                     , ghcjs-dom
                     , ghcjs-base
                     , http-api-data
                     , lens
                     , herculus-lib
                     , mtl
                     , react-flux
                     , react-flux-servant
                     , servant
                     , text
                     , transformers
  hs-source-dirs:      src
  ghcjs-options:       -Wall -dedupe -DGHCJS_BROWSER
  default-language:    Haskell2010
