name:                client
version:             0.0.1
-- synopsis:
-- description:
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable client
  main-is:             Main.hs
  other-modules:       Action
                     , Action.Message
                     , Config
                     , React.Flux.Addons.Free
                     , Store
                     , Store.Message
                     , Store.Session
                     , Views
                     , Views.Auth
                     , Views.Table
                     , Views.Column
                     , Views.Column.ConfigDialog
                     , Views.Row
                     , Views.Cell
                     , Views.ReportCell
                     , Views.Foreign
                     , Views.Combinators
                     , Views.Common
                     , Views.ProjectOverview
                     , Views.Util
                     , WebSocket
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , LambdaCase
                     , BangPatterns
                     , RecordWildCards
  js-sources:          jsbits/config.js
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , deepseq
                     , ghcjs-dom
                     , ghcjs-base
                     , http-api-data
                     , lens
                     , lifted-base
                     , herculus-lib
                     , mtl
                     , react-flux
                     , react-flux-servant
                     , servant
                     , text
                     , transformers
  hs-source-dirs:      src
  ghcjs-options:       -Wall -dedupe -DGHCJS_BROWSER
  default-language:    Haskell2010
