name:                lib
version:             0.0.1
synopsis:            Shared by server and client
description:         Please see README.md
homepage:            https://github.com/githubuser/lib#readme
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
copyright:           2016 Moritz Drexl
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , text
  default-language:    Haskell2010

test-suite lib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
