name:                lib
version:             0.0.1
synopsis:            Shared by server and client
description:         Please see README.md
homepage:            https://github.com/githubuser/lib#readme
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
copyright:           2016 Moritz Drexl
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib.Base64
                     , Lib.Compiler
                     , Lib.Compiler.Types
                     , Lib.Compiler.Parser
                     , Lib.Compiler.Interpreter
                     , Lib.Compiler.Interpreter.Types
                     , Lib.Compiler.Typechecker
                     , Lib.Compiler.Typechecker.Types
                     , Lib.NamedMap
                     , Lib.Api.Rest
                     , Lib.Api.WebSocket
                     , Lib.Types
                     , Lib.Model
                     , Lib.Model.Types
                     , Lib.Model.Column
                     , Lib.Model.Cell
                     , Lib.Model.Class
                     , Lib.Model.Dependencies
                     , Lib.Model.Dependencies.Types
                     , Data.Aeson.Bson
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , bson
                     , bytestring
                     , base64-bytestring
                     , cereal
                     , containers
                     , Decimal
                     , http-api-data
                     , lens
                     , mtl
                     , parsec
                     , servant
                     , scientific
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

test-suite lib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
