name:                server
version:             0.0.1
synopsis:            Hexl server
description:         Please see README.md
homepage:            https://gitlab.mdrexl.net/mdrexl/hexl
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
copyright:           2016 Moritz Drexl
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Monads
                     , Propagate
                     , Propagate.Cache
                     , Propagate.Monad
                     , ConnectionManager
                     , Handler.WebSocket
                     , Handler.Rest
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , fast-logger
                     , lens
                     , lib
                     , monad-control
                     , monad-logger
                     , mongoDB
                     , mtl
                     , pretty-show
                     , servant-server
                     , stm
                     , text
                     , transformers
                     , transformers-base
                     , websockets
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

executable server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aeson
                     , bytestring
                     , either
                     , lib
                     , mongoDB
                     , mtl
                     , servant
                     , servant-server
                     , server
                     , stm
                     , text
                     , transformers
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
