name:                herculus-lib
version:             0.0.1
synopsis:            Shared by server and client
description:         Please see README.md
homepage:            https://github.com/githubuser/lib#readme
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
copyright:           2016 Moritz Drexl
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib.Compiler
                     , Lib.Compiler.Types
                     , Lib.Compiler.Parser
                     , Lib.Compiler.Interpreter
                     , Lib.Compiler.Interpreter.Types
                     , Lib.Compiler.Typechecker
                     , Lib.Compiler.Typechecker.Types
                     , Lib.Compiler.Typechecker.Prim
                     , Lib.NamedMap
                     , Lib.Api.Rest
                     , Lib.Api.Rest.Report
                     , Lib.Api.Schema.Auth
                     , Lib.Api.Schema.Column
                     , Lib.Api.Schema.Project
                     , Lib.Api.WebSocket
                     , Lib.Util.Base64
                     , Lib.Types
                     , Lib.Model
                     , Lib.Model.Auth
                     , Lib.Model.Table
                     , Lib.Model.Project
                     , Lib.Model.Row
                     , Lib.Model.Column
                     , Lib.Model.Cell
                     , Lib.Model.Class
                     , Lib.Model.Dependencies
                     , Lib.Model.Dependencies.Types
                     , Lib.Template
                     , Lib.Template.Parser
                     , Lib.Template.Typechecker
                     , Lib.Template.Interpreter
                     , Lib.Template.Types
                     , Data.Aeson.Bson
  build-depends:       Decimal
                     , aeson
                     , attoparsec
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , bson
                     , bytestring
                     , case-insensitive
                     , cereal
                     , containers
                     , deepseq
                     , email-validate
                     , http-api-data
                     , http-types
                     , http-media
                     , lens
                     , mtl
                     , parsec
                     , pwstore-fast
                     , scientific
                     , servant
                     , text
                     , these
                     , time
                     , transformers
                     , union-find
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , BangPatterns
                     , RecordWildCards
  ghc-options:         -Wall

executable psc-gen
  hs-source-dirs:      psc-gen
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , herculus-lib
                     , lens
                     , purescript-bridge
                     , servant-purescript
                     , text

test-suite herculus-lib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , herculus-lib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
