name:                herculus-lib
version:             0.0.1
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
copyright:           2016-2017 Moritz Drexl
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib.Compiler
                     , Lib.Compiler.AST
                     , Lib.Compiler.AST.Common
                     , Lib.Compiler.AST.Position
                     , Lib.Compiler.Check
                     , Lib.Compiler.Check.Error
                     , Lib.Compiler.Check.Error.Types
                     , Lib.Compiler.Check.Extract
                     , Lib.Compiler.Check.Monad
                     , Lib.Compiler.Check.Monad.Types
                     , Lib.Compiler.Core
                     , Lib.Compiler.Docs
                     , Lib.Compiler.Env
                     , Lib.Compiler.Error
                     , Lib.Compiler.Eval
                     , Lib.Compiler.Eval.Monad
                     , Lib.Compiler.Eval.Types
                     , Lib.Compiler.Parse
                     , Lib.Compiler.Parse.Common
                     , Lib.Compiler.Parse.Lexer
                     , Lib.Compiler.Parse.State
                     , Lib.Compiler.Pretty
                     , Lib.Compiler.Type
                     , Lib.NamedMap
                     , Lib.Api.Rest
                     , Lib.Api.Rest.Report
                     , Lib.Api.Schema.Auth
                     , Lib.Api.Schema.Column
                     , Lib.Api.Schema.Compiler
                     , Lib.Api.Schema.Project
                     , Lib.Api.WebSocket
                     , Lib.Util.Base64
                     , Lib.Types
                     , Lib.Model
                     , Lib.Model.Auth
                     , Lib.Model.Table
                     , Lib.Model.Project
                     , Lib.Model.Row
                     , Lib.Model.Column
                     , Lib.Model.Cell
                     , Lib.Model.Class
                     , Lib.Model.Dependencies
                     , Lib.Model.Dependencies.Types
                     , Lib.Model.ViewState
                     , Lib.Prelude
                     , Lib.Template
                     , Lib.Template.AST
                     , Lib.Template.Check
                     , Lib.Template.Core
                     , Lib.Template.Eval
                     , Lib.Template.Parse
                     , Lib.Template.Parse.Lexer
                     , Data.Aeson.Bson
  build-depends:       aeson
                     , attoparsec
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , bson
                     , bytestring
                     , case-insensitive
                     , cereal
                     , comonad
                     , containers
                     , email-validate
                     , file-embed
                     , free
                     , http-api-data
                     , http-types
                     , http-media
                     , lens
                     , mtl
                     , megaparsec
                     , pretty-show
                     , protolude
                     , pwstore-fast
                     , recursion-schemes
                     , scientific
                     , servant
                     , text
                     , these
                     , time
                     , transformers
                     , union-find
                     , unordered-containers
                     , vector
                     , wl-pprint-text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , BangPatterns
                     , RecordWildCards
                     , ViewPatterns
                     , TupleSections
  ghc-options:         -Wall

executable psc-gen
  hs-source-dirs:      psc-gen
  main-is:             Main.hs
  other-modules:       Options
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , herculus-lib
                     , lens
                     , optparse-applicative
                     , purescript-bridge
                     , servant-purescript
                     , text
  ghc-options:         -Wall

executable doc-gen
  hs-source-dirs:      doc-gen
  main-is:             Main.hs
  other-modules:       Options
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , herculus-lib
                     , lens
                     , optparse-applicative
                     , text
  default-extensions:  OverloadedStrings
                     , LambdaCase
  ghc-options:         -Wall

test-suite herculus-lib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , herculus-lib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
