name:                server
version:             0.0.1
synopsis:            Hexl server
description:         Please see README.md
homepage:            https://gitlab.mdrexl.net/mdrexl/hexl
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
copyright:           2016 Moritz Drexl
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Auth
                     , Auth.Permission
                     , ConnectionManager
                     , Engine
                     , Engine.Compile
                     , Engine.Monad
                     , Engine.Propagate
                     , Engine.Util
                     , Handler.WebSocket
                     , Handler.Rest
                     , HexlNat
                     , Latex
                     , Monads
                     , Options
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , containers
                     , directory
                     , entropy
                     , fast-logger
                     , filepath
                     , lens
                     , herculus-lib
                     , monad-control
                     , monad-logger
                     , mongoDB
                     , mtl
                     , neat-interpolation
                     , network
                     , optparse-applicative
                     , pandoc
                     , pretty-show
                     , servant-server
                     , servant
                     , stm
                     , text
                     , time
                     , transformers
                     , transformers-base
                     , websockets
                     , wai
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , BangPatterns
                     , RecordWildCards
  ghc-options:         -Wall

executable server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aeson
                     , base
                     , bytestring
                     , either
                     , herculus-lib
                     , mongoDB
                     , mtl
                     , servant
                     , servant-server
                     , server
                     , stm
                     , text
                     , transformers
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , server
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
